[tool.poetry]
name = "py404"
version = "0.1.0"
description = "py404 is a CLI tool for finding deadlinks on a website"
license = "MIT"
authors = ["WillDenby <119456795+WillDenby@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/WillDenby/py404"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
py404 = "py404.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
